--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
-== README
+Photogram
+instagram clone built in Ruby on Rails 4
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Steps:
+1. run the command: "rails new Photogram"
+2. test in the sever with the command "rails s" at localhost:3000
+3. initialize git repository and make the first commit
+4. generate a controller and call it posts "rails g controller posts"
+5. create an index action inside the posts_controller.rb
+6. create a index.html.erb page inside app/views/posts/ folder
+7. create a resources route for posts controller in routes.rb file
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+8. create a model Post with only a string caption
+9. run the "rake db:migrate" to run the migrations 
